--- a/reports/jest-report.xml
+++ b/reports/jest-report.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <testsuites>
-  <testsuite name="My suite" tests="2" failures="1" errors="0" skipped="0">
+  <testsuite name="My suite" tests="2" failures="1" errors="0" skipped="0" time="5">
     <testcase classname="my.test.Class" name="My first test"/>
     <testcase classname="my.test.Class" name="My second test">
       <failure/>
